fix: dot spacing in header

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -15,6 +15,7 @@
   font-size: 9vw;
   display: flex;
   flex-direction: column;
+  gap:20px;
   padding-top: 150px;
   font-family: "NeueMachinaUltrabold";
 }
